--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,6 +2,9 @@ name: Deploy Infra
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - master
 concurrency:
   group: n8n-deployment
   cancel-in-progress: false
