--- a/helm/nonlive/values.yaml
+++ b/helm/nonlive/values.yaml
@@ -12,26 +12,15 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
-    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-FS-1-2-Res-2020-10"
-    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:eu-central-1:192256166295:certificate/48f65c44-755f-496f-80b6-6e6e9b89ef9b'
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/group.name: n8n
-    alb.ingress.kubernetes.io/backend-protocol: HTTP
-    alb.ingress.kubernetes.io/load-balancer-attributes: "routing.http.drop_invalid_header_fields.enabled=true,deletion_protection.enabled=true,access_logs.s3.enabled=true,access_logs.s3.bucket=lighthouse-tools-nonlive-192256166295-eu-central-1-access-logs,access_logs.s3.prefix=n8n-nonlive,idle_timeout.timeout_seconds=120"
-    alb.ingress.kubernetes.io/security-groups: "sg-06b43116199ee8f4a"
-    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "false"
-    alb.ingress.kubernetes.io/ip-address-type: dualstack
-    alb.ingress.kubernetes.io/wafv2-acl-arn: "arn:aws:wafv2:eu-central-1:192256166295:regional/webacl/lighthouse-tools-nonlive/c719f81b-3898-4ee4-b764-9cd56667d1ca"
   hosts:
-    - host: n8n.nonlive.lighthouse.services.otto-payments.de
+    - host: submission
       paths:
         - path: /
           pathType: Prefix
   tls:
     - secretName: n8n-tls
       hosts:
-        - n8n.nonlive.lighthouse.services.otto-payments.de
+        - submission
 
 db:
   type: postgresdb
